[tool.poetry]
name = "pkg-visualizer"
version = "0.1.0"
description = "A Python application for visualizing Python packagesin 3D using PyVistaQt"
authors = ["Eric G. Suchanek, Ph.D <suchanek@mac.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.12"
asttokens = "*"
numpy = "*"
panel = "*"
param = "*"
pyvista = {extras = ["jupyter"], version = "^0.45.0"}
rich = "^14.0.0"
pyqt5 = "^5.15.11"
pyvistaqt = "^0.11.2"
vtk = "^9.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.poetry.scripts]
pkg-visualizer = "pkg_visualizer.pkg_visualizer:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"